2019-11-05  Aldy Hernandez  <aldyh@redhat.com>

	* gimple-fold.c, gimple-loop-versioning.cc,
	gimple-ssa-evrp-analyze.[ch], gimple-ssa-evrp.c,
	gimple-ssa-sprintf.c, ipa-cp.c, ipa-prop.c, ipa-prop.h,
	range-op.[hc]*, range.[hc]*, selftest.h, tree-ssa-dom.c,
	tree-ssa-strlen.c, tree-ssa-threadedge.c, tree-ssanames.[hc],
	tree-vrp.[hc], vr-values.[hc]: Global rename of value_range to
	value_range_equiv, and value_range_base to value_range.

2019-11-05  Matthew Malcomson  <matthew.malcomson@arm.com>

	* expr.c (build_personality_function): Fix generated type to
	match actual personality functions.

2019-11-05  Matthew Malcomson  <matthew.malcomson@arm.com>

	* config/aarch64/aarch64.c (aarch64_handle_attr_cpu): Allocate
	enough bytes for the NULL character.

2019-11-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92280
	* match.pd (BIT_FIELD_REF of CTOR): Unless the original CTOR
	had a single use do not create a new CTOR.
	* tree-ssa-forwprop.c (simplify_bitfield_ref): Do not re-fold
	BIT_FIELD_REF of a CTOR via GENERIC.

2019-11-05  Andreas Krebbel  <krebbel@linux.ibm.com>

	* config/s390/s390.c (s390_vector_alignment): Check if the value
	fits into uhwi before using it.

2019-11-05  Martin Liska  <mliska@suse.cz>

	* symbol-summary.h: Use ggc_delete.

2019-11-05  Anton Youdkevitch  <anton.youdkevitch@bell-sw.com>

	* config/aarch64/aarch64.c (thunderx2t99_vector_cost):
	Change vec_perm field to 10.

2019-11-05  Arnaud Charlet  <charlet@adacore.com>

	* doc/install.texi: Further fix syntax for html generation.

2019-11-05  Martin Liska  <mliska@suse.cz>

	* symbol-summary.h: Rename allocator to m_allocator and
	add comment.

2019-11-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92324
	* tree-vect-loop.c (check_reduction_path): For MIN/MAX require
	all signed or unsigned operations.

2019-11-05  Jan Hubicka  <jh@suse.cz>

	* hsa-brig.c: Include alloc-pool.h
	* hsa-dump.c: Likewise.
	* hsa-gen.c: Likewise.
	* hse-regalloc.c: Likewise.